--- a/test.tex
+++ b/test.tex
@@ -441,7 +441,7 @@ It was shown in fact, that a number of superfast, with periods inferior to 2 day
 
 \subsection{The Tifft, Arp and Pioneer effects}
 
-Another unexplained effect is the 75(5) km/s periodicity in the galactic redshift \cite{Tifft}. Now, this speed $v_1 approx ca/F$ corresponding to the quantum resonance, with the electron classical radius $r_{e} = \lambdabar_e/a$  and where $m_{F} = m_{e}\sqrt{a_{w}}$ is the Fermi mass:
+Another unexplained effect is the 75(5) km/s periodicity in the galactic redshift \cite{Tifft}. Now, this speed $v_1 \approx ca/F$ corresponding to the quantum resonance, with the electron classical radius $r_{e} = \lambdabar_e/a$  and where $m_{F} = m_{e}\sqrt{a_{w}}$ is the Fermi mass:
 \begin{equation}
 v_{n}/n = v_{1} = \hbar /r_{e} m_{F}
 \end{equation}
@@ -463,7 +463,7 @@ This suggests a 3D geometrical model. Indeed, consider $t =R/c$, and $M^{\prime}
 \begin{equation}
 ln^{2} (M^{\prime}/m_{e} ) + ln^{2} (R/\lambdabar_{e}) + ln^2 (t/t_{e} ) \approx ln^2 (R_{GC} /\lambdabar_{e} )
 \end{equation} 
-\textit{showing the Grandcosmos}. This traduces, in function of $P = m_P/m_e$ by:
+\textit{showing the Grandcosmos ratio}. This traduces, in function of $P = m_P/m_e$ by:
 \begin{equation}
 ln^2(P^4/a^3) + 2 ln^2(P^2/pH) \approx ln^2(2P^5/a^6)
 \end{equation}
@@ -484,15 +484,15 @@ In a 3D Super-space, logarithms of physical ratios are considered vectors. The G
 $M^{\prime}$ is the critical mass in the Grandcosmos reduced spherical hologram. This is a dramatic geometrical confirmation (not dependant of the base for logarithms) of the Extended (2D-1D) Holographic Principle applied to the Bekenstein-Hawking Universe entropy. The Grandcosmos existence cannot be denied since the relation involving \textit{natural} logarithms with $e$ and $a$ reach precision $10^{-7}$.} 
 \end{figure}
 
-Another crucial point in Physics is the existence of invariant fundamental constants. Thus, association of three of them must give characteristic values of $M$, $L$, $T$. So, approaching a domain in Physics necessitates to calculate characteristic values ($M, L, T$) from the three universal constants which are the most pertinent in the considered domain. This Prospective Dimensional Analysis is largely used in Fluid Mechanics, where the equations are intractable. However, it is largely ignored in other domains because there is not really mathematical foundation, apart the above essential remarks. The triplet $c, G, \hbar$ which define the above Planck units is a notable exception. However, there is no standard interpretation for the Planck mass. Note that  it appears above (Eq. 7) and in Biology \cite{Sanchez1}. 
+Another crucial point in Physics is the existence of invariant fundamental constants. Thus, association of three of them must give characteristic values of $M$, $L$, $T$. So, approaching a domain in Physics necessitates to calculate characteristic values ($M, L, T$) from the three universal constants which are the most pertinent in the considered domain. This Prospective Dimensional Analysis is largely used in Fluid Mechanics, where the equations are intractable. However, it is largely ignored in other domains because there is not really mathematical foundation, apart the above essential remarks. The triplet $c, G, \hbar$ which define the above Planck units is a notable exception. However, there is no standard interpretation for the Planck mass. Note that  it appears above (Eq. 8) and in Biology \cite{Sanchez1}. 
 
-\textit{Indeed, in virtue of the above Hierarchy Principle, the lack of theoretical justification is not a reason to neglect Prospective Dimensional Analysis}. 
+\textit{Moreover, in virtue of the above Hierarchy Principle, the lack of theoretical justification is not a reason to neglect Prospective Dimensional Analysis}. 
 
 The elimination of $c$ in the above $R$ formula means that the simplest basic dimensional
 analysis starting from $\hbar$, $G$ and $m$, the Electron-Proton-Neutron mean mass, gives a good
 approximation for $R/2$. Indeed, in the Hypothesis of a coherent Cosmos, it is logical to discard $c$
 which is far two small a speed. This has not been observed during one century since $c$ is always
-believed to be the single mandatory foundation of space-time. The warning of Poincar\'{e}, the true
+believed to be the single mandatory foundation of space-time. The warning of Poincar\'{e}\cite{Sanchez1}, the true
 discoverer of Relativity: \textit{`use 4D space-time, but do not confound Space and Time`} has long been
 forgotten, and physicists have unwisely put $c = 1$ in their equations.
 
@@ -511,7 +511,7 @@ sustain, meaning that $\rho_{c}$ must be considered a fundamental constant. This
 \begin{equation}
 t\{\hbar,\rho_{c} ,G\}\, = 1/\rho_{c}^{1/2} G^{1/2} = (R/c) (8\pi/3)^{1/2}.
 \end{equation}
-This idea of $\rho_{c}$ being a fundamental constant permits to define $R$ without any ambiguity: this is the 
+This idea of $\rho_{c}$ being a fundamental constant permits to define the Hubble radius $R$ without any ambiguity: this is the 
 radius of the sphere containing a critical mass. This justifies the above application of the Bekenstein-Hawking entropy. 
 
 Opponents would say that the
@@ -563,7 +563,7 @@ co-prime, by:
 \begin{equation}
 T^{2} = L^{3} = n^{6}
 \end{equation}
-where n is a whole number, showing the classical 6D phase-space of point mechanics. Considering the exponents, this particularizes the usual 3D space, but attributes 2 dimensions for the Time, in conformity with an independent study \cite{Bars}.
+where $n$ is a whole number, showing the classical 6D phase-space of point mechanics. Considering the exponents, this particularizes the usual 3D space, but attributes 2 dimensions for the Time, in conformity with an independent study \cite{Bars}.
 
 \textit{This is the degenerate arithmetic form of the 2D-3D holographic principle}.
 
@@ -581,7 +581,7 @@ Principle \cite{Sanchez4} involves a field term $F^{7}$, and so introduces the d
 \begin{equation}
 R/\lambdabar_{e} \approx s_4^5 \approx f(26)/6 \approx \Gamma^{28}/5 \approx (2/\delta)^{210}
 \end{equation}
-where $s_4 = 2\pi^2 a^3$ is the area of the 4-sphere of radius $a$ and $\Gamma$, the Atiyah constant (section 8.3). Moreover (0.1 \%, 0.03 \% and 0.9 \%):
+where $s_4 = 2\pi^2 a^3$ is the area of the 4-sphere of radius $a$ and $\Gamma$ is the Atiyah constant (section 8.3). Moreover (0.1 \%, 0.03 \% and 0.9 \%):
 \begin{equation}
 2/\delta = 2R/R^{\prime} \approx lnp/lna \approx lna/ln\Gamma \approx ln\Gamma/lnf
 \end{equation}
@@ -591,22 +591,11 @@ where $f$ is the inverse strong coupling constant (section 8.3). This  confirms 
 \end{equation}
 showing a symmetry between basic powers of $a$ and $p$. The consequences of the appearance of $\Gamma$\ in the above equation will appear in section 8.3. 
 
-
-
-
-
-
-
-
-
-
-
-
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 \section{The special holographic relations}
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 
-The holographic technique, based on the properties of a coherent wave, is by far the most efficient way to treat huge information, in particular in optics \cite{Grosmann}. Now, the main lesson of modern physics is that everything (light \textit{and} matter) propagates by waves (quanta appearing only at the detection). Moreover, a coherent wave is represented by a unitary operator: we have shown that the quantum formalism is very similar to the holographic one, describing an interaction by a two-step holographic process. From these considerations and CCO study, the masses of the photon and graviton has been proposed (section 4.2).
+The holographic technique, based on the properties of a coherent wave, is by far the most efficient way to treat huge information, in particular in optics \cite{Grosmann}.
 
 The students of the first author realized in 1987 a hologram by scanning a 1 mW security power laser beam upon a photo-sensible area of $0.6~ m^2$. The emulsion depth 10 microns permitted false color to be obtained by varying illumination through a photo-mask, and use of a shrinkable emulsion chemical process. The information contained in this hologram reached $10^{15}$ bit, obtained in 12 minutes of scanning exposition. Then, the first author claimed \textit{'such an efficient way of dealing information must be used by Nature'}. Turning to the impressive data of Particle Physics, after an intensive study, holographic relations were indeed found, and its arithmetical form, the Holic Principle was presented at ANPA 16 (Cambridge, 1994) \cite{Sanchez4}. 
 
@@ -619,21 +608,22 @@ While the standard Holographic Principle is limited to using the Plank area, it 
 \subsection{The graviton and photon masses}
 %Consider for simplicity two identical system of mass m in their basic state. They are each characterized by a stationnary wave, which may be seen as the sum of a diverging wave and a converging one: s + s*, with s = exp(if2p(t-r/c)), where f is the proper frequency mc2/ħ. The second system is characterized by the analogous wave r + r*. Supposing that the vacuum is not empty, an hologram is formed: (s + s*)(r + r*), which includes the resonant terms sr* + s*r. So, the simple presence of two systems create such an inhomogeneity in all the Universe.  Now if the first system has an excess of energy, this means it is receiving an excess signal of the form s*. By diffraction on the above hologram it gives rise to s*(sr* + s*r), with resonant term r*. 
 
-The electromagnetic interaction is not really understood \cite{Okun}. Convergent and divergent waves lead to an oscillation\cite{Sanchez1}. This is known as the particle exchange of a massive boson associated with any interaction. Here, it is assumed here that the boson has a tachyonic speed $C_1$. Now, the resonance condition is that the wavelengths are identical, by analogy with the Gabor condition\cite{Gabor}. So, for the electron wave and the weak wave:
+The electromagnetic interaction is not really understood \cite{Okun}. The main lesson of modern physics is that everything (light \textit{and} matter) propagates by waves (quanta appearing only at the detection). Moreover, a coherent wave is represented by a unitary operator: we have shown that the quantum formalism is very similar to the holographic one, describing an interaction by a two-step holographic process. From these considerations and CCO study, the masses of the photon and graviton has been proposed (section 4.2). We recall that convergent and divergent waves lead to an oscillation\cite{Sanchez1}. This is known as the particle exchange of a massive boson associated with any interaction. Here, it is assumed here that the boson has a tachyonic speed $C_1$. Now, the resonance condition is that the wavelengths are identical, by analogy with the Gabor condition\cite{Gabor}. So, for the electron wave and the weak wave:
 \begin{equation}
 \lambdabar_e = \hbar/m_e c = \hbar / m_{gr}C{gr}
 \end{equation}
 \begin{equation}
 \lambdabar_w = \hbar/m_w c = \hbar / m_{ph}C{ph}
 \end{equation}
-Equaling the tachonic celerities to $C_1$, and $m_{ph}$ with $\hbar/cl_K$ (cite{Marchal}, one gets a \textit{ppb correlation} with the above single electron radius $R_1$:
+Equaling the tachonic celerities to $C_1$, and $m_{ph}$ with $\hbar/cl_K$ (cite{Marchal}, one gets a \textit{ppb correlation} with the above single electron radius $R_1$, taking account of the above relation tying $R_1$ and $l_K$(section 4.1):
 \begin{equation}
 C_1/c = m_e/m_{gr} = m_w/m_{ph} = l_K/\lambdabar_w \approx R_1/\lambdabar_e (4\pi p/p_0)^2 
 \end{equation}
-This leads to $m_{ph} \approx 1.2222 10^{-55}$ kg, and  $m_{gr} \approx 3.7223 10^{-67}$ kg, which fit cananical placs in the Topological Axis (Fig 1). Indeed (0.8 \%):
+This leads to $m_{ph} \approx 1.2222 10^{-55}$ kg, and  $m_{gr} \approx 3.7223 10^{-67}$ kg, which fit canonical places in the Topological Axis (Fig 1). This means (0.8 \%):
 \begin{equation}
 a_w = m_{ph}/m_{gr} \approx f(26)/f(24) 
 \end{equation}
+calling for further study
 
 \subsection{The Conservation of Information}
 
