--- a/test.tex
+++ b/test.tex
@@ -615,15 +615,15 @@ The electromagnetic interaction is not really understood \cite{Okun}. The main l
 \begin{equation}
 \lambdabar_w = \hbar/m_w c = \hbar / m_{ph}C{ph}
 \end{equation}
-Equaling the tachonic celerities to $C_1$, and $m_{ph}$ with $\hbar/cl_K$ (cite{Marchal}, one gets a \textit{ppb correlation} with the above single electron radius $R_1$, taking account of the above relation tying $R_1$ and $l_K$(section 4.1):
+Equaling the tachonic celerities to $C_1$, and $m_{ph}$ with $\hbar/cl_K$ (cite{Marchal}, one gets a \textit{ppb correlation} with the above single electron radius $R_1$, taking account of the above relation tying $R_1$ and $l_K$(section 4.2):
 \begin{equation}
 C_1/c = m_e/m_{gr} = m_w/m_{ph} = l_K/\lambdabar_w \approx R_1/\lambdabar_e (4\pi p/p_0)^2 
 \end{equation}
-This leads to $m_{ph} \approx 1.2222 10^{-55}$ kg, and  $m_{gr} \approx 3.7223 10^{-67}$ kg, which fit canonical places in the Topological Axis (Fig 1). This means (0.8 \%):
+This leads to $m_{ph} \approx 1.2222\cdot 10^{-55}$ kg, and  $m_{gr} \approx 3.7223\cdot 10^{-67}$ kg, which fit canonical places in the Topological Axis (Fig 1). This means (0.8 \%):
 \begin{equation}
 a_w = m_{ph}/m_{gr} \approx f(26)/f(24) 
 \end{equation}
-calling for further study
+calling for further study.
 
 \subsection{The Conservation of Information}
 
@@ -645,7 +645,13 @@ The Wien wavelength enters (0.03 \%):
 \begin{equation}
 l_{CMB} / \lambdabar_e \approx P/pH a^3
 \end{equation}
-confirming that the cosmic temperature is invariant. 
+confirming that the cosmic temperature is invariant.
+
+Note that the measured proton 'charge radius' $8.775(5)\cdot 10^{-16}~m$ is slightly distinct from the above value. There is presently a 'proton radius puzzle'\cite{Carlson}. With the Plank density $d_{P}$ and $v_p$ the proton volume, the following relation is very intriguing\cite{Haramein}:
+\begin{equation}
+d_Pv_P \approx M_B
+\end{equation}
+where $M_B \approx 0.04 \cdotM$ is the baryon mass of the visible Universe.
 
 \subsection{The Cosmic Temperature}
 
@@ -1345,10 +1351,14 @@ arXiv:hep-th/9209058.
 treating time on an equal footing with space''. Phys. Lett. B. 678(2):
 218--221 (2009); arXiv:0905.0538.
 
+\bibitem{Carlson} Carlson C.E. ``The proton radius puzzle''. Progress in Particle and Nuclear Physics, vol 82. 59-77 (2015).
+
+\bibitem{Haramein} Haramein N. ''The Schwarzschild Proton''. AIP CP 1303, ISBN 978-0-7354-0858, pp. 95-100 (2010).
+
 \bibitem{Koide} Koide Y. ``Fermion-Boson two-body model of quarks and leptons and
 Cabibbo mixing''.  Lett. Nuovo Cimento 34, 201 (1982).
 
-\bibitem{Nambu} Nambu H. ''An empirical Mass Spectrum of Elementary Particles'. Phys. Vol. 7, number 5, 595-6.
+\bibitem{Nambu} Nambu H. ''An empirical Mass Spectrum of Elementary Particles''. Phys. Vol. 7, number 5, 595-6.
 
 \bibitem{Aschbacher} Aschbacher H. Finite Group Theory. C.U.P. 242-248 (2000). 
 
