--- a/test.tex
+++ b/test.tex
@@ -651,7 +651,7 @@ Note that the measured proton 'charge radius' $8.775(5)\cdot 10^{-16}~m$ is slig
 \begin{equation}
 d_Pv_P \approx M_B
 \end{equation}
-where $M_B \approx 0.04 \cdotM$ is the baryon mass of the visible Universe.
+where $M_B$ is the baryon mass of the visible Universe.
 
 \subsection{The Cosmic Temperature}
 
