--- a/test.tex
+++ b/test.tex
@@ -646,12 +646,7 @@ The Wien wavelength enters (0.03 \%):
 l_{CMB} / \lambdabar_e \approx P/pH a^3
 \end{equation}
 confirming that the cosmic temperature is invariant.
-
-Note that the measured proton 'charge radius' $8.775(5)\cdot 10^{-16}~m$ is slightly distinct from the above value. There is presently a 'proton radius puzzle'\cite{Carlson}. With the Plank density $d_{P}$ and $v_p$ the proton volume, the following relation is very intriguing\cite{Haramein}:
-\begin{equation}
-d_Pv_P \approx M_B
-\end{equation}
-where $M_B$ is the baryon mass of the visible Universe.
+Note that the measured proton 'charge radius' $8.775(5)\cdot 10^{-16}~m$ is slightly distinct from the above value. There is presently a 'proton radius puzzle'\cite{Carlson}. With the Plank density $d_{P}$ the proton volume  $v_p$, the baryon mass of the visible Universe $M_B\approx d_Pv_P $. This is very intriguing\cite{Haramein}:
 
 \subsection{The Cosmic Temperature}
 
