--- a/test.tex
+++ b/test.tex
@@ -646,7 +646,7 @@ The Wien wavelength enters (0.03 \%):
 l_{CMB} / \lambdabar_e \approx P/pH a^3
 \end{equation}
 confirming that the cosmic temperature is invariant.
-Note that the measured proton 'charge radius' $8.775(5)\cdot 10^{-16}~m$ is slightly distinct from the above value. There is presently a 'proton radius puzzle'\cite{Carlson}. With the Plank density $d_{P}$ the proton volume  $v_p$, the baryon mass of the visible Universe $M_B\approx d_Pv_P $. This is very intriguing\cite{Haramein}:
+Note that the measured proton 'charge radius' $8.775(5)\cdot 10^{-16}~m$ is slightly distinct from the above value. There is presently a 'proton radius puzzle'\cite{Carlson}. With the Plank density $d_{P}$ the proton volume  $v_p$, the baryon mass of the visible Universe $M_B\approx d_Pv_P $. This is very intriguing\cite{Haramein}.
 
 \subsection{The Cosmic Temperature}
 
@@ -682,17 +682,8 @@ which is a holographic conservation in \textit{the half-sphere of the visible un
 \begin{equation}
 (4\pi/3)(R/l_K)^3 \approx 4\pi (r_e/l_P)^2 
 \end{equation}
-The deviation of the first relation is very close to that of the relation $R_1^3 \approx R_{GC}^2 \lambdabar_M$ inducing, to 17 ppm (identified in Eq. () as $np^2/H^2\sqrt{pH}$ to 0.3 ppm) and 0.1\%: 
-\begin{equation}
- (R_{GC}l_P/Rr_e)^2 \approx (R_1l_K/Rr_e)^3 \approx \mu^{35}/ln2
-\end{equation}
-showing a holic form, involving the Muon/Electron mass ratio $\mu$ (see section 9.5).
-Taking account of the identity: $2l_P^2 = \lambdabar_M R = (R^{\prime}r_e)^3/(R_{GC}l_P)^2$, this leads to:  (above 17 ppm and 1.8 ppm) :
-\begin{equation}
-r_e/\lambdabar_M \approx (R_1l_K/R^{\prime}r_e)^3 \approx (4\pi P/p_K)^4
-\approx (5/4)^2 \mu ^{35} \end{equation}
-with the Koide-Sanchez constant $p_K$, characteristic of the two heavy leptons (section 9.5).
-The above term $R_1l_K/R^{\prime}r_e$ is close to (1\%) $\sqrt{O_M} \approx 2a^2P$ (0.18 \%). The study of deviations shows the intermediate bosons ratios $W$ and $Z$, with values specified to the ppb range in section 9.4, leading to (-4 and 3.5 ppm, 0.3\%):
+
+The term $R_1l_K/R^{\prime}r_e$ is close to (1\%) $\sqrt{O_M} \approx 2a^2P$ (0.18 \%). The study of deviations shows the intermediate bosons ratios $W$ and $Z$, with values specified to the ppb range in section 9.4, leading to (-4 and 3.5 ppm, 0.3\%):
 \begin{equation}
 O_M (FR^{\prime}/PR_1)^2 \approx W^4 (137/a)^3
 \end{equation}
