--- a/test.tex
+++ b/test.tex
@@ -692,15 +692,9 @@ O_M (FR^{\prime}/PR_1)^2 \approx W^4 (137/a)^3
 \end{equation}
 This precises the relation $a_w/WZ \approx \sqrt{a}$ known (0.1 \%) in Particle Theory (0.3 and -0.4 ppm)
 \begin{equation}
-137 p_0 W^2 Z^2/p a_w^2 \approx \sqrt{O_M}/(2a^2 P) \approx e^{-4a}
+137 p_0 W^2 Z^2/p a_w^2 \approx \sqrt{O_M}/(2a^2 P) \approx e^{1/-4a}
 \end{equation}   
-Thus, in first approximation $(e^{-1/4a} \approx ~0.036 ~\%)$, the square root of the Monster order is the ratio of the Rydbergh wavelength to the Planck length.
-
-
-
-
-
-
+Thus, in first approximation $(e^{-1/4a} \approx ~0.036 ~\%)$, the square root of the Monster order is the ratio of the Rydbergh wavelength $2a^2\lambdabar_e$ to the Planck length.
 
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 \section{The role of Intermediary Mathematical Constants}
