--- a/test.tex
+++ b/test.tex
@@ -682,6 +682,15 @@ which is a holographic conservation in \textit{the half-sphere of the visible un
 \begin{equation}
 (4\pi/3)(R/l_K)^3 \approx 4\pi (r_e/l_P)^2 
 \end{equation}
+The deviation of the first relation is very close to that of Eq.11: $R_1^3\approxR_{GC}^3\lambdabar_M$. This induces, with precision 17 ppm, identified to 0.3 ppm with $np^2/H^2\sqrt{pH}, and 0.08 \%:
+\begin{equation}
+(R_{GC}l_P/Rr_e)^2\approx(R_1l_K/Rr_e)^3\approx 3^{1/3}\mu^{35}
+\end{equation}
+showing a quasi-holic form, which is completed by the study of the BH entropy of the Grandcosmos: (12 ppm, 100 ppm, 42 ppm):
+\begin{equation}
+\mu^{210} \approx \pi^{-3/2})(R_{GC}/l_P)^4 \approx 4\pi \tau^137 (a/137)^2 \approx O_M^9 lnD (p/n)^2
+\end{equation}
+Thus the expected correlation \cite{Witten} \cite{Sanchez5} of $lnD$ with $4\pi$ is confirmed. The existence of a Final Theory based on the Holic Principle (section 6) and the Grandcosmos cannot be denied. The interpretation is clear: \textit{the 4D space-time of Grandcosmos is associated with a 9D space involving the Monster. This opens a path towards the Final Theory}  
 
 The term $R_1l_K/R^{\prime}r_e$ is close to (1\%) $\sqrt{O_M} \approx 2a^2P$ (0.18 \%). The study of deviations shows the intermediate bosons ratios $W$ and $Z$, with values specified to the ppb range in section 9.4, leading to (-4 and 3.5 ppm, 0.3\%):
 \begin{equation}
@@ -974,12 +983,6 @@ implies $O_M^{1/7} \approx s_a^{(4)}$. Indeed, the Monster appears to be close t
 O_M \approx d_e J_3^7 \sqrt{p/p_0}
 \end{equation}
 \textit{The above relations proves that physics establish unexpected bridges between sporadic groups, including the Titts one}.
-
-The study of the BH entropy of the Grandcosmos leads to the confirmation of the holic complete dimension 210 (12 ppm, 100 ppm, 42 ppm):
-\begin{equation}
-\mu^{210} \approx \pi^{-3/2})(R_{GC}/l_P)^4 \approx 4\pi \tau^137 (a/137)^2 \approx O_M^9 lnD (p/n)^2
-\end{equation}
-Thus the expected correlation \cite{Witten} \cite{Sanchez5} of $lnD$ with $4\pi$ is confirmed. The existence of a Final Theory based on the Holic Principle (section 6) and the Grandcosmos cannot be denied. The interpretation is clear: \textit{the 4D space-time of Grandcosmos is associated with a 9D space involving the Monster. This opens a path towards the Final Theory}
 
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 \section{The fine-tuning with basic mathematical constants}
@@ -1337,6 +1340,10 @@ treating time on an equal footing with space''. Phys. Lett. B. 678(2):
 
 \bibitem{Haramein} Haramein N. ''The Schwarzschild Proton''. AIP CP 1303, ISBN 978-0-7354-0858, pp. 95-100 (2010).
 
+\bibitem{Witten} Witten E. The Three-Dimensional Gravity Revisited. arxiv.org/abs/076.3359 (2006).
+
+\bibitem{Sanchez5} Sanchez F.M. Electrical Moonshine. vixra:1801:0067 (2018). 
+
 \bibitem{Koide} Koide Y. ``Fermion-Boson two-body model of quarks and leptons and
 Cabibbo mixing''.  Lett. Nuovo Cimento 34, 201 (1982).
 
@@ -1382,10 +1389,6 @@ Bravais de sa famlille cristalline dans l'espace euclidien a six dimensions''.
 CRAS. Paris 305, Ser. II, 349--352 (1987).
 
 \bibitem{Atiyah2} Atiyah Michael, ``Private communication`` (December 2018).
-
-\bibitem{Witten} Witten E. The Three-Dimensional Gravity Revisted. arxiv.org/abs/076.3359
-
-\bibitem{Sanchez5} Sanchez F.M. Electrical Moonshine. vixra:1801:0067 
 
 
 \end{thebibliography}
