--- a/test.tex
+++ b/test.tex
@@ -682,13 +682,13 @@ which is a holographic conservation in \textit{the half-sphere of the visible un
 \begin{equation}
 (4\pi/3)(R/l_K)^3 \approx 4\pi (r_e/l_P)^2 
 \end{equation}
-The deviation of the first relation is very close to that of Eq.11: $R_1^3\approxR_{GC}^3\lambdabar_M$. This induces, with precision 17 ppm, identified to 0.3 ppm with $np^2/H^2\sqrt{pH}, and 0.08 \%:
+The deviation of the first relation is very close to that of Eq.11: $R_1^3 \approx R_{GC}^2 \lambdabar_M$. This induces, with precision 17 ppm, identified to 0.3 ppm with $np^2/H^2\sqrt{pH}$, and 0.08 \%:
 \begin{equation}
-(R_{GC}l_P/Rr_e)^2\approx(R_1l_K/Rr_e)^3\approx 3^{1/3}\mu^{35}
+(R_{GC}l_P/Rr_e)^2 \approx (R_1l_K/Rr_e)^3 \approx 3^{1/3}\mu^{35}
 \end{equation}
 showing a quasi-holic form, which is completed by the study of the BH entropy of the Grandcosmos: (12 ppm, 100 ppm, 42 ppm):
 \begin{equation}
-\mu^{210} \approx \pi^{-3/2})(R_{GC}/l_P)^4 \approx 4\pi \tau^137 (a/137)^2 \approx O_M^9 lnD (p/n)^2
+\mu^{210} \approx \pi^{-3/2})(R_{GC}/l_P)^4 \approx 4\pi \tau^{137} (a/137)^2 \approx O_M^9 lnD (p/n)^2
 \end{equation}
 Thus the expected correlation \cite{Witten} \cite{Sanchez5} of $lnD$ with $4\pi$ is confirmed. The existence of a Final Theory based on the Holic Principle (section 6) and the Grandcosmos cannot be denied. The interpretation is clear: \textit{the 4D space-time of Grandcosmos is associated with a 9D space involving the Monster. This opens a path towards the Final Theory}  
 
