--- a/test.tex
+++ b/test.tex
@@ -686,9 +686,9 @@ The deviation of the first relation is very close to that of Eq.11: $R_1^3 \appr
 \begin{equation}
 (R_{GC}l_P/Rr_e)^2 \approx (R_1l_K/Rr_e)^3 \approx 3^{1/3}\mu^{35}
 \end{equation}
-showing a quasi-holic form, which is completed by the study of the BH entropy of the Grandcosmos: (12 ppm, 100 ppm, 42 ppm):
+showing a quasi-holic form. In accordance with the Hierarchy Principle, the holic form with dimension 210 is completed by the study of the BH entropy of the Grandcosmos: (12 ppm, 100 ppm, 42 ppm):
 \begin{equation}
-\mu^{210} \approx \pi^{-3/2})(R_{GC}/l_P)^4 \approx 4\pi \tau^{137} (a/137)^2 \approx O_M^9 lnD (p/n)^2
+\mu^{210} \approx \pi^{-3/2}(R_{GC}/l_P)^4 \approx 4\pi \tau^{137} (a/137)^2 \approx O_M^9 lnD (p/n)^2
 \end{equation}
 Thus the expected correlation \cite{Witten} \cite{Sanchez5} of $lnD$ with $4\pi$ is confirmed. The existence of a Final Theory based on the Holic Principle (section 6) and the Grandcosmos cannot be denied. The interpretation is clear: \textit{the 4D space-time of Grandcosmos is associated with a 9D space involving the Monster. This opens a path towards the Final Theory}  
 
@@ -718,8 +718,7 @@ Since any electrical charge is a whole multiple of unitary charge $q$ (a relativ
 
 However, theorists focused on one property only, the appearance of its fifth power in the Hydrogen hyper-fine spectra, calling its inverse $\alpha$, the `fine-structure constant'. 
 
-Many researchers looked for the mathematical origin of $a$. In quantum electrodynamics, $\sqrt{a}$ is connected with the Electron magnetic abnormal factor, which is very precisely measured\cite{Tanabashi}: $$d_e \approx 1.00115965218076(27)$$
-It is readily seen that $\sqrt{a} \approx exp(\pi /2)^2$. From $i = e^{(i\pi /2)}$, this writes $i^{-lni}$ and the study of deviation leads to, with $a_e = a/d_e$ (29 ppb):
+Many researchers looked for the mathematical origin of $a$. In quantum electrodynamics, $\sqrt{a}$ is connected with the Electron magnetic abnormal factor, which is very precisely measured\cite{Tanabashi}: $d_e \approx 1.00115965218076(27)$. It is readily seen that $\sqrt{a} \approx exp(\pi /2)^2$. From $i = e^{(i\pi /2)}$, this writes $i^{-lni}$ and the study of deviation leads to, with $a_e = a/d_e$ (29 ppb):
 \begin{equation}
 i^{-lni}/\sqrt{d_e} \approx (\sqrt{a_e} + 1/\sqrt{a_e})^2    
 \end{equation}
