--- a/test.tex
+++ b/test.tex
@@ -722,17 +722,17 @@ Many researchers looked for the mathematical origin of $a$. In quantum electrody
 \begin{equation}
 i^{-lni}/\sqrt{d_e} \approx (\sqrt{a_e} + 1/\sqrt{a_e})^2    
 \end{equation}
-The slight deviation is not a valid objection, since \textit{Nature must use rational approximations for} $\pi$. Indeed, the fractional development for the corresponding $\pi$ value is 3,7,15,1,$(\tau/\mu)^2$, with $\mu$ and $\tau$ the normalised masses of the heavy leptons. It is in fact a formal rationalisation, focussing on a acute problem of present standard model, which is unable to explain the three families of particles. Thus, the study of the muon and tau mass ratios is crucial. One observes (1 ppm, 56 ppm, 0.06 \%):
+The slight deviation is not a valid objection, since \textit{Nature must use rational approximations for} $\pi$. Indeed, the fractional development for the corresponding $\pi$ value is 3,7,15,1,$(\tau/\mu)^2$, with $\mu$ and $\tau$ the normalised masses of the heavy leptons. It is a formal rationalisation, focussing on a acute problem of present standard model, which is unable to explain the three families of particles. Thus, the study of the muon and tau mass ratios is crucial. One observes (1 ppm, 56 ppm, 0.02 \%):
 \begin{equation}
 2/\delta \approx (1/2d_{e}) ln(pH)/lna \approx (1/d_e^{2})ln\tau/ln\mu\approx d_e^2 lns/ln\tau
 \end{equation}
-where $s$ is the Higgs ratio (Section 9).
+where $s$ is the Higgs ratio (Section 9.4).
 The following Koide relation \cite{Koide}, \textit{ which has a mathematical justification in term of circulant matrix} \cite{Brannen}, correctly predicted $\tau$ at an epoch (around 2000) during which its measurement was false to 3 $\sigma$. It writes:
 \begin{equation}
 (1 + \mu + \tau)/2 = (1 + \sqrt\mu + \sqrt\tau)^2/3 = p_K
 \end{equation}
 This Koide relation, quite discarded by the scientific community, is another sign of the serious incompleteness of the present Particle Physics standard.
-This Koide-Sanchez constant was detected in Eq.(), and willbe precusezd to ppb precision in section 9.4.
+This Koide-Sanchez constant wil lbe precised to ppb precision in section 9.4.
 
 \subsection{The Eddington's constant 137}
 
@@ -771,7 +771,7 @@ With $l_W$ the mean of the CMB and CNB Wien lengths (0.06 \%):
 \begin{equation}
 P_d \approx l_W / \lambda_e
 \end{equation}
-The pertinence of the T.A. series is thus confirmed, calling for further study.
+The pertinence of the Topological Axis series is thus confirmed, calling for further study.
 
 \subsection{The Atiyah and Sternheimer constants}
     Sir Michael Atiyah was a precursor in the search for unity in Mathematics and Physics. 
@@ -784,7 +784,7 @@ Moreover, $v$ appears in the normalised neutron mass $n\approx 1838.6836089(17)$
 \begin{equation}
 n^{1/3}\approx v~(\pi/2)^2  
 \end{equation}
-The small deviation is again attributed to a rationalisation of $\pi$: 3,7,16,-(1+$\tau/\mu)^2$.
+The small deviation is again attributed to a rationalisation of $\pi$ involving the heavy leaptons: 3,7,16,-(1+$\tau/\mu)^2$.
 
 Another central constant in the Planck law is the irrational Apery constant $\xi(3) \approx 1.20205691$. The number of photons in a sphere of radius $r$ is:
 $n_{ph}(r) = (4\pi/3) (r/l_{ph})^3$
@@ -1295,7 +1295,7 @@ Group). ``The review of particle physics''. Phys. Rev. D, 98, 030001 (2018);
 of the Newtonian constant of gravitation, G.'', Phil. Trans. R. Soc. A, 372,
 20140032 (2014); {\it http://dx.doi.org/10.1098/rsta.2014.0032}.
 
-\bibitem{As} Aschbacher M. ``Sporadic Groups``, Ney-York. C.U.P. (1994).
+\bibitem{Aschbacher} Aschbacher M. ``Sporadic Groups``, Ney-York. C.U.P. (1994).
 
 \bibitem{Sanchez3} Sanchez F.M. ``Towards the grand unified Holic Theory''. Current
 Issues in Cosmology. Ed. J.-C. Pecker and J. Narlikar. Cambridge Univ. Press,
