--- a/test.tex
+++ b/test.tex
@@ -818,15 +818,8 @@ as a simplification term. One observes:
 \begin{equation}
 2/\delta = 2a^3/pH \approx (1/2d_{e}) ln(pH)/lna \approx lna/ln\Gamma
 \end{equation}
-With  $w = F/W$, this leads to (22 ppm):
-\begin{equation}
-a/\Gamma = \pi /\gamma  \approx w^{\delta}
-\end{equation}
-while, with $z = F/Z$ (3 ppm):
-\begin{equation}
- 137/\Gamma \approx z^{\sqrt{f}/2}   
-\end{equation}
-where $f$ is the Bizouard strong constant precising the inverse 8.44(5) of the standard 'strong coupling constant'\cite{Tanabashi}:
+With  $w = F/W$, this leads to (22 ppm):$a/\Gamma = \pi /\gamma  \approx w^{\delta}$
+while, with $z = F/Z$ (3 ppm): $137/\Gamma \approx z^{\sqrt{f}/2}$, where $f$ is the Bizouard strong constant precising the inverse 8.44(5) of the standard 'strong coupling constant'\cite{Tanabashi}:
 \begin{equation}
 f = a_w/2\pi (pH)^{3/2} \approx 8.43450
 \end{equation}
