--- a/test.tex
+++ b/test.tex
@@ -646,7 +646,7 @@ The Wien wavelength enters (0.03 \%):
 l_{CMB} / \lambdabar_e \approx P/pH a^3
 \end{equation}
 confirming that the cosmic temperature is invariant.
-Note that the measured proton 'charge radius' $8.775(5)\cdot 10^{-16}~m$ is slightly distinct from the above value. There is presently a 'proton radius puzzle'\cite{Carlson}. With the Plank density $d_{P}$ the proton volume  $v_p$, the baryon mass of the visible Universe $M_B\approx d_Pv_P $. This is very intriguing\cite{Haramein}.
+Note that the measured proton 'charge radius' $8.775(5)\cdot 10^{-16}~m$ is slightly distinct from the above value. There is presently a 'proton radius puzzle'\cite{Carlson}. With the Plank density $d_{P}$ and the proton volume $v_p$, the baryon mass of the visible Universe is $M_B\approx d_Pv_P $. This call for further study.
 
 \subsection{The Cosmic Temperature}
 
@@ -1329,8 +1329,6 @@ treating time on an equal footing with space''. Phys. Lett. B. 678(2):
 218--221 (2009); arXiv:0905.0538.
 
 \bibitem{Carlson} Carlson C.E. ``The proton radius puzzle''. Progress in Particle and Nuclear Physics, vol 82. 59-77 (2015).
-
-\bibitem{Haramein} Haramein N. ''The Schwarzschild Proton''. AIP CP 1303, ISBN 978-0-7354-0858, pp. 95-100 (2010).
 
 \bibitem{Witten} Witten E. The Three-Dimensional Gravity Revisited. arxiv.org/abs/076.3359 (2006).
 
