--- a/test.tex
+++ b/test.tex
@@ -605,7 +605,7 @@ Strangely enough, when the first author's publication was blocked (1993-1995), a
 
 While the standard Holographic Principle is limited to using the Plank area, it is natural to suppose that they are other holographic units. In fact, \textit{the Topological Axis is the reunion of eight 1D-2D holographic relations}. We present here four more confirmations. 
 
-\subsection{The graviton and photon masses}
+\subsection{The graviton and photon masses*}
 %Consider for simplicity two identical system of mass m in their basic state. They are each characterized by a stationnary wave, which may be seen as the sum of a diverging wave and a converging one: s + s*, with s = exp(if2p(t-r/c)), where f is the proper frequency mc2/ħ. The second system is characterized by the analogous wave r + r*. Supposing that the vacuum is not empty, an hologram is formed: (s + s*)(r + r*), which includes the resonant terms sr* + s*r. So, the simple presence of two systems create such an inhomogeneity in all the Universe.  Now if the first system has an excess of energy, this means it is receiving an excess signal of the form s*. By diffraction on the above hologram it gives rise to s*(sr* + s*r), with resonant term r*. 
 
 The electromagnetic interaction is not really understood \cite{Okun}. The main lesson of modern physics is that everything (light \textit{and} matter) propagates by waves (quanta appearing only at the detection). Moreover, a coherent wave is represented by a unitary operator: we have shown that the quantum formalism is very similar to the holographic one, describing an interaction by a two-step holographic process. From these considerations and CCO study, the masses of the photon and graviton has been proposed (section 4.2). We recall that convergent and divergent waves lead to an oscillation\cite{Sanchez1}. This is known as the particle exchange of a massive boson associated with any interaction. Here, it is assumed here that the boson has a tachyonic speed $C_1$. Now, the resonance condition is that the wavelengths are identical, by analogy with the Gabor condition\cite{Gabor}. So, for the electron wave and the weak wave:
@@ -615,7 +615,7 @@ The electromagnetic interaction is not really understood \cite{Okun}. The main l
 \begin{equation}
 \lambdabar_w = \hbar/m_w c = \hbar / m_{ph}C{ph}
 \end{equation}
-Equaling the tachonic celerities to $C_1$, and $m_{ph}$ with $\hbar/cl_K$ (cite{Marchal}, one gets a \textit{ppb correlation} with the above single electron radius $R_1$, taking account of the above relation tying $R_1$ and $l_K$(section 4.2):
+Equaling the tachonic celerities to $C_1$, and $m_{ph}$ with $\hbar/cl_K$ \cite{Marchal}, one gets a \textit{ppb correlation} with the above single electron radius $R_1$, taking account of the relation tying $R_1$ and $l_K$(section 4.2):
 \begin{equation}
 C_1/c = m_e/m_{gr} = m_w/m_{ph} = l_K/\lambdabar_w \approx R_1/\lambdabar_e (4\pi p/p_0)^2 
 \end{equation}
