--- a/test.tex
+++ b/test.tex
@@ -605,18 +605,17 @@ Strangely enough, when the first author's publication was blocked (1993-1995), a
 
 While the standard Holographic Principle is limited to using the Plank area, it is natural to suppose that they are other holographic units. In fact, \textit{the Topological Axis is the reunion of eight 1D-2D holographic relations}. We present here four more confirmations. 
 
-\subsection{The graviton and photon masses*}
+\subsection{The graviton and photon masses}
 %Consider for simplicity two identical system of mass m in their basic state. They are each characterized by a stationnary wave, which may be seen as the sum of a diverging wave and a converging one: s + s*, with s = exp(if2p(t-r/c)), where f is the proper frequency mc2/ħ. The second system is characterized by the analogous wave r + r*. Supposing that the vacuum is not empty, an hologram is formed: (s + s*)(r + r*), which includes the resonant terms sr* + s*r. So, the simple presence of two systems create such an inhomogeneity in all the Universe.  Now if the first system has an excess of energy, this means it is receiving an excess signal of the form s*. By diffraction on the above hologram it gives rise to s*(sr* + s*r), with resonant term r*. 
 
-The electromagnetic interaction is not really understood \cite{Okun}. The main lesson of modern physics is that everything (light \textit{and} matter) propagates by waves (quanta appearing only at the detection). Moreover, a coherent wave is represented by a unitary operator: we have shown that the quantum formalism is very similar to the holographic one, describing an interaction by a two-step holographic process. From these considerations and CCO study, the masses of the photon and graviton has been proposed (section 4.2). We recall that convergent and divergent waves lead to an oscillation\cite{Sanchez1}. This is known as the particle exchange of a massive boson associated with any interaction. Here, it is assumed here that the boson has a tachyonic speed $C_1$. Now, the resonance condition is that the wavelengths are identical, by analogy with the Gabor condition\cite{Gabor}. So, for the electron wave and the weak wave:
+The electromagnetic interaction is not really understood, especially the photon concept \cite{Okun}. The main lesson of modern physics is that everything (light \textit{and} matter) propagates by waves (quanta appearing only at the detection). Moreover, a coherent wave is represented by a unitary operator: we have shown that the quantum formalism is very similar to the holographic one, describing an interaction by a two-step holographic process. We recall that convergent and divergent waves lead to an oscillation\cite{Sanchez1}. This is known as the particle exchange of a massive boson associated with any interaction. Here, it is assumed that the boson has a tachyonic speed $C_1$. Now, the resonance condition is that the wavelengths are identical, by analogy with the Gabor condition\cite{Gabor}. So, for the electron wave and the weak wave:
 \begin{equation}
 \lambdabar_e = \hbar/m_e c = \hbar / m_{gr}C{gr}
 \end{equation}
 \begin{equation}
 \lambdabar_w = \hbar/m_w c = \hbar / m_{ph}C{ph}
 \end{equation}
-Equaling the tachonic celerities to $C_1$, and $m_{ph}$ with $\hbar/cl_K$ \cite{Marchal}, one gets a \textit{ppb correlation} with the above single electron radius $R_1$, taking account of the relation tying $R_1$ and $l_K$(section 4.2):
-\begin{equation}
+Equaling the tachyonic celerities to $C_1$, and $m_{ph}$ with $\hbar/cl_K$ \cite{Marchal}, taking account of the \textit{ppb correlation} tying $R_1$ and $l_K$ (section 4.2), one gets:
 C_1/c = m_e/m_{gr} = m_w/m_{ph} = l_K/\lambdabar_w \approx R_1/\lambdabar_e (4\pi p/p_0)^2 
 \end{equation}
 This leads to $m_{ph} \approx 1.2222\cdot 10^{-55}$ kg, and  $m_{gr} \approx 3.7223\cdot 10^{-67}$ kg, which fit canonical places in the Topological Axis (Fig 1). This means (0.8 \%):
@@ -628,10 +627,16 @@ calling for further study.
 \subsection{The Conservation of Information}
 
 The Grandcosmos holographic reduction radius $R^{\prime}$ shows itself an holographic
-relation with the CMB Wien wavelength $l_{CMB} = hc/kTv $, with $v = 5 (1-e^{-v}) \approx 4.965114245)$, and the proton radius, identified to $\lambdabar_e/\sqrt{D} \approx 8.7029\cdot 10^{-16}$ m (0.1 \% and -0.1 \%):
+relation with the CMB Wien wavelength $l_{CMB} = hc/kTv $, with $v = 5 (1-e^{-v}) \approx 4.965114245)$, and the proton radius, identified to $\lambdabar_e/\sqrt{D} \approx 8.7029\cdot 10^{-16}$ m (0.1 \%, -0.1 \% and 87 ppm):
 \begin{equation}
-e^{a} \approx 4\pi(R^{\prime}/l_{CMB})^{2} \approx (2\pi /3) (r_p/l_P)^3 
+e^{a} \approx 4\pi(R^{\prime}/l_{CMB})^{2} \approx (2\pi /3) (r_p/l_P)^3 \approx \sqrt{3} M_B/m_P
 \end{equation}
+where $M_B = 2M/\sqrt{n}$ is the baryonic mass of the Universe\cite{Sanchez1}. This means
+\begin{equation}
+4\pi (R/e^a l_P)^2 \approx (4\pi/3)n \approx (4\pi/3)(v\pi^2/4)^3
+\end{equation}
+where $v$ is the reduced Wien coefficient (section 8.3). 
+
 Since the holographic technique uses coherent radiation, this seems incompatible with the CMB
 thermal character. But \textit{in a totally deterministic cosmos, there is no paradox}. This question is
 connected with the black hole information paradigm \cite{Preskill}. Independently of our approach, an
@@ -646,7 +651,7 @@ The Wien wavelength enters (0.03 \%):
 l_{CMB} / \lambdabar_e \approx P/pH a^3
 \end{equation}
 confirming that the cosmic temperature is invariant.
-Note that the measured proton 'charge radius' $8.775(5)\cdot 10^{-16}~m$ is slightly distinct from the above value. There is presently a 'proton radius puzzle'\cite{Carlson}. With the Plank density $d_{P}$ and the proton volume $v_p$, the baryon mass of the visible Universe is $M_B\approx d_Pv_P $. This call for further study.
+Note that the measured proton 'charge radius' $8.775(5)\cdot 10^{-16}~m$ is slightly distinct from the above value. There is presently a 'proton radius puzzle'\cite{Carlson}.
 
 \subsection{The Cosmic Temperature}
 
@@ -1276,8 +1281,6 @@ syst\`eme solaire''. Compt. Rend. Acad. Sci. Paris. 222, 220--221 (1946).
 Kotov V.A. ``Motion of the fast exoplanets''. Astrophys. Space Sci. 363(3), 1-5
 (2018); DOI: 10.1007/s10509-018-3278-1.
 
-\bibitem{Marchal} Marchal C. ``Physics with photons of non-zero rest mass``, Proceedings of 28th Intern. Workshop,p. 152-166. Protvino, Russia (2005).
-
 %\bibitem{Robles} Robles P. and Claro F. ``Can there be massive photons ? A pedagogical glance at the origin of %mass''. European Journal of Physics. 33(5) 1217, (2012).
 
 \bibitem{Tanabashi} Tanabashi M., Hagiwara K., Hikasa K., et al. (Particle Data
@@ -1318,7 +1321,11 @@ p. 1--16.
 
 \bibitem{Grosmann} Grosmann, M. and Meyrueis P. ``Optics and Photonics Applied to Communication and Processing''. SPIE.  Jan 1979.
 
-\bibitem{Gabor} Gabor D. A new microscopic principle.Nature 161, 777-778 (1948). 
+\bibitem{Okun} Okun L.B. ``Photon: history, mass, charge``. Int. Conf. on the Photon, Warsaw University, arXiv:hep-ph/0602036 (2005).
+
+\bibitem{Gabor} Gabor D. A new microscopic principle.Nature 161, 777-778 (1948).
+
+\bibitem{Marchal} Marchal C. ``Physics with photons of non-zero rest mass``, Proceedings of 28th Intern. Workshop,p. 152-166. Protvino, Russia (2005).
 
 \bibitem{Preskill} Preskill J. ``Do black holes destroy information?'' Internat.
 Symp. on Black Holes, Membranes, Wormholes, and Superstrings (1992);
