--- a/test.tex
+++ b/test.tex
@@ -616,6 +616,7 @@ The electromagnetic interaction is not really understood, especially the photon 
 \lambdabar_w = \hbar/m_w c = \hbar / m_{ph}C{ph}
 \end{equation}
 Equaling the tachyonic celerities to $C_1$, and $m_{ph}$ with $\hbar/cl_K$ \cite{Marchal}, taking account of the \textit{ppb correlation} tying $R_1$ and $l_K$ (section 4.2), one gets:
+\begin{equation}
 C_1/c = m_e/m_{gr} = m_w/m_{ph} = l_K/\lambdabar_w \approx R_1/\lambdabar_e (4\pi p/p_0)^2 
 \end{equation}
 This leads to $m_{ph} \approx 1.2222\cdot 10^{-55}$ kg, and  $m_{gr} \approx 3.7223\cdot 10^{-67}$ kg, which fit canonical places in the Topological Axis (Fig 1). This means (0.8 \%):
