--- a/test.tex
+++ b/test.tex
@@ -632,11 +632,10 @@ relation with the CMB Wien wavelength $l_{CMB} = hc/kTv $, with $v = 5 (1-e^{-v}
 \begin{equation}
 e^{a} \approx 4\pi(R^{\prime}/l_{CMB})^{2} \approx (2\pi /3) (r_p/l_P)^3 \approx \sqrt{3} M_B/m_P
 \end{equation}
-where $M_B = 2M/\sqrt{n}$ is the baryonic mass of the Universe\cite{Sanchez1}. This means
+where $M_B = 2M/\sqrt{n}$ is the baryonic mass of the Universe\cite{Sanchez1}. The factor $\sqrt{3}$ implies a new holographic relation (see the 'neutron relation' in section 8.3):
 \begin{equation}
 4\pi (R/e^a l_P)^2 \approx (4\pi/3)n \approx (4\pi/3)(v\pi^2/4)^3
-\end{equation}
-where $v$ is the reduced Wien coefficient (section 8.3). 
+\end{equation} 
 
 Since the holographic technique uses coherent radiation, this seems incompatible with the CMB
 thermal character. But \textit{in a totally deterministic cosmos, there is no paradox}. This question is
